--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -142,12 +142,12 @@
             &-mobile{
                 background-color: $accent;
                 padding: 5px;
-                padding-right: 20px;
+                padding-right: 35px;
                 padding-bottom: 3px;
                 border-radius: 15px;
                 //box-shadow: $box-shadow-light;
                 display: block;
-                margin-right: -2rem;
+                margin-right: -3rem;
                 z-index: 10001;
                 img{
                     width:2rem;
