--- a/src/components/navbarMobile/NavbarMobile.scss
+++ b/src/components/navbarMobile/NavbarMobile.scss
@@ -25,6 +25,7 @@
     z-index: 1000;
     width: 300px;
     box-shadow: $box-shadow-light;
+    font-weight: 450;
 
     &-close{
         background-color: white;
